Deliberate practice metrodrone outlets, small fixes

--- a/Modacity/Modacity/ViewController/AskFeedbacks/feedback.storyboard
+++ b/Modacity/Modacity/ViewController/AskFeedbacks/feedback.storyboard
@@ -138,7 +138,7 @@ how to improve? Connect with one of our experts.</string>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
-                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                         </subviews>
                                         <color key="backgroundColor" red="0.24705882352941178" green="0.24313725490196078" blue="0.35686274509803922" alpha="1" colorSpace="calibratedRGB"/>
